sandbox/output
Reorder.java:41: error: incompatible types: List<List<Integer>> cannot be converted to ArrayList<List<Integer>>
            result = result1;
                     ^
1 error
